--- a/Assignment2.ipynb
+++ b/Assignment2.ipynb
@@ -72,7 +72,7 @@
    ],
    "source": [
     "#c.Create a 3-dimensional array of zeros with shape (2, 3, 4).\n",
-    "arr2=np.random.rand(2,3,4)\n",
+    "arr2=np.zeros(2,3,4)\n",
     "arr2"
    ]
   },
